// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`action > respects defaults and explicit specifications for yamlPaths 1`] = `
"source:
  gitConfig:
    repoURL: https://github.com/example/repo.git
    path: foo/bar
    ref: source-ref
  dockerImage:
    tag: source-tag

source-just-git-config:
  gitConfig:
    repoURL: https://github.com/example/repo.git
    path: foo/bar-just
    ref: source-ref-just

target-both:
  promote:
    from: source
  gitConfig:
    ref: source-ref
  dockerImage:
    tag: source-tag

target-just-git-config:
  promote:
    from: source
  gitConfig:
    ref: source-ref

target-just-docker-image:
  promote:
    from: source
  dockerImage:
    tag: source-tag

target-has-both-but-source-has-one:
  promote:
    from: source-just-git-config
  gitConfig:
    ref: source-ref-just
  dockerImage:
    tag: do-not-overwrite-me

completely-different-fields:
  promote:
    from: source
    yamlPaths: [[gitConfig, path]]
  gitConfig:
    path: foo/bar
    ref: do-not-overwrite-me
  dockerImage:
    tag: or-me
"
`;

exports[`action > updates git refs 1`] = `
"some-service-staging:
  gitConfig:
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world
    trackMutableRef: main
    ref:        "abcdef1234567"

some-service-prod:
  promote:
    from: some-service-staging
  gitConfig:
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world
    ref:    abcdef1234567      # please

some-service-not-selected:
  promote:
    from: some-service-staging
  gitConfig:
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world
    ref:    overwrite-me      # this will not be updated because of the regexp
"
`;

exports[`action > updates git refs 2`] = `
"some-service-staging:
  gitConfig:
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world
    trackMutableRef: main
    ref:        "abcdef1234567"

some-service-prod:
  promote:
    from: some-service-staging
  gitConfig:
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world
    ref:    overwrite-me      # please

some-service-not-selected:
  promote:
    from: some-service-staging
  gitConfig:
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world
    ref:    abcdef1234567      # this will not be updated because of the regexp
"
`;

exports[`action > uses global block values for gitConfig and dockerImage fallback 1`] = `
"global:
  gitConfig:
    repoURL: https://github.com/example/global-repo.git
    path: global/path
  dockerImage:
    repository: gcr.io/example/global-image
    setValue: [global, dockerImage, tag]

source-env:
  gitConfig:
    ref: source-ref-123
  dockerImage:
    tag: source-tag-v1

target-env:
  promote:
    from: source-env
  gitConfig:
    ref: source-ref-123
  dockerImage:
    tag: source-tag-v1

"
`;
